-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.0
-
None
-
-
fc277e3ff (dev), 13871ee86 (6.9)
Macos bootstrap does not include qfilesystemengine_mac.mm, but uses qfilesystemengine_unix.cpp instead.
But this incorrect ifdef does not pass compiler to stubs below.
https://github.com/qt/qtbase/blob/dev/src/corelib/io/qfilesystemengine_unix.cpp#L1277
This results into
ld64.lld: error: undefined symbol: QFileSystemEngine::supportsMoveFileToTrash()
ld64.lld: error: undefined symbol: QFileSystemEngine::moveFileToTrash(QFileSystemEntry const&, QFileSystemEntry&, QSystemError&)
That ifdef should be `#if defined(Q_OS_DARWIN) && !defined(QT_BOOTSTRAPPED)`